# virginia-clemm-poe

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE.md  BALANCE_FEATURE.md  CHANGELOG.md  CLI.txt  CONTRIBUTING.md  HOT.md  Makefile  PLAN.md  README.md  TODO.md  WORK.md  WORKFLOWS.md  chapter1-introduction.html  chapter2-installation.html  chapter3-quickstart.html  chapter4-api.html  chapter5-cli.html  chapter6-models.html  chapter7-browser.html  chapter8-configuration.html  chapter9-troubleshooting.html  check_cookies.py  debug_login.py  index.html  llms.txt  llms_tldr.txt  md.txt  mypy.ini  publish.sh  pyproject.toml  test_balance.py  test_balance_debug.py  test_balance_numeric.py  test_balance_web.py  test_session.py
.github/workflows/: ci.yml  docs.yml
_github/workflows/: docs.yml
data/: poe_models.json
docs/: 404.html  ALGORITHMS.md  EDGE_CASES.md  chapter1-introduction.html  chapter2-installation.html  chapter3-quickstart.html  chapter4-api.html  chapter5-cli.html  chapter6-models.html  chapter7-browser.html  chapter8-configuration.html  chapter9-troubleshooting.html  index.html  objects.inv  sitemap.xml  table.html
docs/data/: poe_models.json
docs/models/: App-Creator.html  Aya-Expanse-32B.html  Aya-Vision.html  Bagoodex-Web-Search.html  Bria-Eraser.html  Cartesia-Ink-Whisper.html  Cartesia-Sonic.html  Cartesia.html  ChatGPT-4o-Latest.html  Clarity-Upscaler.html  Claude-Haiku-3.5-Search.html  Claude-Haiku-3.5.html  Claude-Haiku-3.html  Claude-Opus-3.html  Claude-Opus-4-1.html  Claude-Opus-4-Reasoning.html  Claude-Opus-4-Search.html  Claude-Opus-4.1.html  Claude-Opus-4.html  Claude-Sonnet-3.5-June.html  Claude-Sonnet-3.5-Search.html  Claude-Sonnet-3.5.html  Claude-Sonnet-3.7-Reasoning.html  Claude-Sonnet-3.7-Search.html  Claude-Sonnet-3.7.html  Claude-Sonnet-4-Reasoning.html  Claude-Sonnet-4-Search.html  Claude-Sonnet-4.html  Command-R-Plus.html  Command-R.html  DALL-E-3.html  DeepClaude.html  DeepSeek-Prover-V2.html  DeepSeek-R1-DI.html  DeepSeek-R1-Distill.html  DeepSeek-R1-FW.html  DeepSeek-R1-N.html  DeepSeek-R1-Turbo-DI.html  DeepSeek-R1.html  DeepSeek-V3-DI.html  (+281 more)
docs/search/: search_index.json
issues/: 201.txt  202.txt  301.txt  302.txt  303.txt
models/: App-Creator.html  Aya-Expanse-32B.html  Aya-Vision.html  Bagoodex-Web-Search.html  Bria-Eraser.html  Cartesia-Ink-Whisper.html  Cartesia-Sonic.html  Cartesia.html  ChatGPT-4o-Latest.html  Clarity-Upscaler.html  Claude-Haiku-3.5-Search.html  Claude-Haiku-3.5.html  Claude-Haiku-3.html  Claude-Opus-3.html  Claude-Opus-4-1.html  Claude-Opus-4-Reasoning.html  Claude-Opus-4-Search.html  Claude-Opus-4.1.html  Claude-Opus-4.html  Claude-Sonnet-3.5-June.html  Claude-Sonnet-3.5-Search.html  Claude-Sonnet-3.5.html  Claude-Sonnet-3.7-Reasoning.html  Claude-Sonnet-3.7-Search.html  Claude-Sonnet-3.7.html  Claude-Sonnet-4-Reasoning.html  Claude-Sonnet-4-Search.html  Claude-Sonnet-4.html  Command-R-Plus.html  Command-R.html  DALL-E-3.html  DeepClaude.html  DeepSeek-Prover-V2.html  DeepSeek-R1-DI.html  DeepSeek-R1-Distill.html  DeepSeek-R1-FW.html  DeepSeek-R1-N.html  DeepSeek-R1-Turbo-DI.html  DeepSeek-R1.html  DeepSeek-V3-DI.html  (+281 more)
scripts/: lint.py
src/virginia_clemm_poe/: __init__.py  __main__.py  api.py  balance_scraper.py  browser.py  browser_manager.py  browser_pool.py  config.py  exceptions.py  models.py  poe_session.py  type_guards.py  types.py  updater.py  utils.py
src/virginia_clemm_poe/data/: poe_models.json
src/virginia_clemm_poe/utils/: __init__.py  cache.py  crash_recovery.py  logger.py  memory.py  paths.py  timeout.py
src_docs/: mkdocs.yml  update_docs.py
src_docs/md/: chapter1-introduction.md  chapter2-installation.md  chapter3-quickstart.md  chapter4-api.md  chapter5-cli.md  chapter6-models.md  chapter7-browser.md  chapter8-configuration.md  chapter9-troubleshooting.md  index.md  table.html
src_docs/md/data/: poe_models.json
src_docs/md/models/: App-Creator.md  Aya-Expanse-32B.md  Aya-Vision.md  Bagoodex-Web-Search.md  Bria-Eraser.md  Cartesia-Ink-Whisper.md  Cartesia-Sonic.md  Cartesia.md  ChatGPT-4o-Latest.md  Clarity-Upscaler.md  Claude-Haiku-3.5-Search.md  Claude-Haiku-3.5.md  Claude-Haiku-3.md  Claude-Opus-3.md  Claude-Opus-4-1.md  Claude-Opus-4-Reasoning.md  Claude-Opus-4-Search.md  Claude-Opus-4.1.md  Claude-Opus-4.md  Claude-Sonnet-3.5-June.md  Claude-Sonnet-3.5-Search.md  Claude-Sonnet-3.5.md  Claude-Sonnet-3.7-Reasoning.md  Claude-Sonnet-3.7-Search.md  Claude-Sonnet-3.7.md  Claude-Sonnet-4-Reasoning.md  Claude-Sonnet-4-Search.md  Claude-Sonnet-4.md  Command-R-Plus.md  Command-R.md  DALL-E-3.md  DeepClaude.md  DeepSeek-Prover-V2.md  DeepSeek-R1-DI.md  DeepSeek-R1-Distill.md  DeepSeek-R1-FW.md  DeepSeek-R1-N.md  DeepSeek-R1-Turbo-DI.md  DeepSeek-R1.md  DeepSeek-V3-DI.md  (+281 more)
tests/: __init__.py  conftest.py  test_api.py  test_balance_api.py  test_browser_stability.py  test_cli.py  test_models.py  test_type_guards.py
